<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GooglePlusActivity" >

    <FrameLayout
        android:id="@+id/googlePlusFragmentContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignLeft="@+id/loginPassword"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/loginPassword"/>

    <Button
        android:id="@+id/btPlayDemo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btSignin"
        android:layout_alignRight="@+id/btSignup"
        android:layout_below="@+id/btSignin"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="40dp"
        android:text="@string/demo" />

    <Button
        android:id="@+id/btSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btPlayDemo"
        android:layout_alignRight="@+id/logUserName"
        android:text="@string/signup" />

    <EditText
        android:id="@+id/server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginPassword"
        android:layout_alignTop="@+id/googlePlusFragmentContainer"
        android:layout_alignRight="@+id/loginPassword"
        android:layout_marginTop="50dp"
        android:ems="12"
        android:visibility="gone"
        android:hint="@string/server"
        android:text="@string/server_value" />

    <EditText
        android:id="@+id/logUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/server"
        android:layout_alignRight="@+id/loginPassword"
        android:layout_below="@+id/googlePlusFragmentContainer"
        android:layout_marginTop="19dp"
        android:ems="12"
        android:hint="@string/userName"
        android:text="@string/userName_value" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logUserName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/password_value" />

    <Button
        android:id="@+id/btSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/loginPassword"
        android:layout_below="@+id/loginPassword"
        android:layout_marginTop="18dp"
        android:onClick="login"
        android:text="@string/signin" >

        <requestFocus />
    </Button>

</RelativeLayout>