<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GooglePlusActivity" >

    <Button
        android:id="@+id/btRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/newUserName"
        android:layout_below="@+id/newUserPassword"
        android:layout_marginTop="28dp"
        android:text="@string/register" />

    <TextView
        android:id="@+id/lblNewUserTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newUserPassword"
        android:layout_alignParentTop="true"
        android:text="@string/newUserTitle"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/newUserPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newUserName"
        android:layout_below="@+id/newUserName"
        android:layout_marginTop="26dp"
        android:ems="12"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:text="@string/password_value" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/newUserFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newUserName"
        android:layout_below="@+id/lblNewUserTitle"
        android:layout_marginTop="26dp"
        android:ems="12"
        android:hint="@string/fullName" />

    <EditText
        android:id="@+id/newUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newUserFullname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:ems="12"
        android:hint="@string/userName" />

</RelativeLayout>